--- a/index.html
+++ b/index.html
@@ -10,59 +10,74 @@
     <main>
         <div class="main-container">
             <div class="logo-container">
-                <img class="logo" src="./assets/Logo.png" alt="">
+                <div class="logo">
+                    <img src="./assets/Logo.png" alt="Logo">
+                </div>
                 <h1 class="container-heading">For Individuals</h1>
-                <p>Start benefiting from the wellness experience. For companies looking on increasing productivity, and improving organization wellness.</p>
+                <p>
+                    Start benefiting from the wellness experience. For companies looking on increasing productivity, and improving organization wellness.
+                </p>
+                <p class="flexible-visibility">
+                    Inspiring wholesome harmony for the mind, body and spirit, for
+                    everyone, everywhere.
+                </p>
             </div>
-            <div class="form-container">
-                <div class="grid-container">
-                    <div class="label">
-                        <label>First Name</label>
-                        <input type="text" class="first-name" placeholder="Tolu">
-                    </div>
-                    <div class="label">
-                        <label>Last Name</label>
-                        <input type="text" placeholder="">
-                    </div>
-                    <div class="label">
-                        <label>Gender</label>
-                        <select name="Gender" id="Gender">
-                            <option value="1">Select here</option>
-                        </select>
-                    </div>
-                    <div class="label">
-                        <label>Date of birth</label>
-                        <div class="calendar-icon">
-                            <input type="text" class="dob" placeholder="Select here">
-                        <img class="calendar" src="./assets/u_a_calendar-alt.png" alt="">
+            <div class="form-section">
+                <div class="form-container">
+                    <div class="grid-container">
+                        <div class="label">
+                            <label>First Name</label>
+                            <input type="text" class="first-name" placeholder="Tolu">
+                        </div>
+                        <div class="label">
+                            <label>Last Name</label>
+                            <input type="text" placeholder="">
+                        </div>
+                        <div class="label">
+                            <label>Gender</label>
+                            <select name="Gender" id="Gender">
+                                <option value="1">Select here</option>
+                            </select>
+                        </div>
+                        <div class="label">
+                            <label>Date of birth</label>
+                            <div class="calendar-icon">
+                                <input type="text" class="dob" placeholder="Select here">
+                            <img class="calendar" src="./assets/u_a_calendar-alt.png" alt="">
+                            </div>
+                        </div>
+                        <div class="label">
+                            <label>Weight (KG)</label>
+                            <input type="number" placeholder="Enter Weight">
+                        </div>
+                        <div class="label">
+                            <label>Height (CM)</label>
+                            <input type="number" placeholder="Enter height here..">
                         </div>
                     </div>
                     <div class="label">
-                        <label>Weight (KG)</label>
-                        <input type="number" placeholder="Enter Weight">
+                        <label>Activity Level</label>
+                        <select>
+                            <option value="" disabled selected>Select here</option>
+                        </select>
                     </div>
-                    <div class="label">
-                        <label>Height (CM)</label>
-                        <input type="number" placeholder="Enter height here..">
+                    <div  class="label">
+                        <label>Password</label>
+                        <div class="eye-icon">
+                            <input type="password" class="password">
+                            <img class="show" src="./assets/show.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="label">
-                    <label>Activity Level</label>
-                    <select>
-                        <option value="" disabled selected>Select here</option>
-                    </select>
-                </div>
-                <div  class="label">
-                    <label>Password</label>
-                    <div class="eye-icon">
-                        <input type="password" class="password">
-                        <img class="show" src="./assets/show.png" alt="">
+                    <div>
+                        <button class="button">Register</button>
+                    </div>
+                    <div class="top-footer">
+                        <footer >By clicking Register, you agree to our <span><a href="#"></a>Terms of Use</span> and our <span><a href="#"></a>Privacy Policy</span></footer>
                     </div>
                 </div>
-                <div class="">
-                    <button class="button">Register</button>
+                <div class="bottom-footer">
+                    <footer>By clicking Register, you agree to our <span><a href="#"></a>Terms of Use</span> and our <span><a href="#"></a>Privacy Policy</span></footer>
                 </div>
-                <footer>By clicking Register, you agree to our <span>Terms of Use</span> and our <span>Privacy Policy</span></footer>
             </div>
         </div>
     </main>
